Added more test data

--- a/Multi Model Test.ipynb
+++ b/Multi Model Test.ipynb
@@ -64,13 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "timer = Timer()\n",
-    "\n",
-    "image_path = config['test_data_path']+'new-york-street.jpg'"
+    "timer = Timer()"
    ]
   },
   {
@@ -110,6 +108,13 @@
     "        'model_type': 'inceptionv3'\n",
     "    }\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load Models"
    ]
   },
   {
@@ -156,32 +161,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test on Image"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = config['test_data_path'] + 'people-working.jpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[START]\n",
       "\n",
       "VGG16\n",
-      "\tCaption: parked in the middle of a city street\n",
-      "\tVGG16: 2 seconds\n",
+      "\tCaption: woman is sitting at a table at a restaurant\n",
+      "\tDuration: 2 seconds\n",
       "\n",
       "InceptionV3 Beam 3\n",
-      "\tCaption: group of people stand in front of a waterfall\n",
-      "\tInceptionV3 Beam 3: 11 seconds\n",
+      "\tCaption: group of people sit in front of a restaurant\n",
+      "\tDuration: 4 seconds\n",
       "\n",
       "InceptionV3 Beam 5\n",
-      "\tCaption: group of people stand in front of a building in front of a large building\n",
-      "\tInceptionV3 Beam 5: 6 seconds\n",
-      "Image Analysis Time: 20\n"
+      "\tCaption: group of people are standing in front of a glass fountain\n",
+      "\tDuration: 4 seconds\n",
+      "\n",
+      "[END] Image Analysis Time: 10\n"
      ]
     }
    ],
    "source": [
     "timer.start('Image Analysis')\n",
+    "print(\"[START]\")\n",
     "\n",
     "for i, model in enumerate(models):\n",
     "    model_name = model['name']\n",
@@ -201,7 +225,7 @@
     "    print(\"\\tCaption: %s\" % generated_caption)\n",
     "    print(\"\\tDuration: %d seconds\" % timer.end(model_name))\n",
     "\n",
-    "print(\"Image Analysis Time: %d\" % timer.end('Image Analysis'))"
+    "print(\"\\n[END] Image Analysis Time: %d\" % timer.end('Image Analysis'))"
    ]
   },
   {
